Fixes `WMCollapse` hover color

--- a/src/components/common/WMCollapse/style.module.scss
+++ b/src/components/common/WMCollapse/style.module.scss
@@ -12,7 +12,7 @@
     overflow: hidden;
 
     &:hover {
-      background-color: var(--border-light);
+      background-color: var(--hover-color);
     }
 
     &.has-drag-handle {
